apps/media/ingest/qbittorrent/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: qbittorrent
  name: qbittorrent-prod-media-statefulset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      # securityContext:
      #   fsGroup: 10000
      #   runAsGroup: 10000
      #   runAsNonRoot: true
      #   runAsUser: 10000
      #   seccompProfile:
      #     type: RuntimeDefault
      #   readOnlyRootFilesystem: true
      # automountServiceAccountToken: false
      containers:
        - securityContext: {}
          # allowPrivilegeEscalation: false
          # capabilities:
          #   drop: ["ALL"]
          image: docker.io/linuxserver/qbittorrent
          name: qbittorrent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 6881
              protocol: TCP
            - containerPort: 6881
              protocol: UDP
          resources:
            limits:
              cpu: 2000m
              memory: 2048Mi
            requests:
              cpu: 500m
              memory: 2048Mi
          volumeMounts:
            - name: data
              mountPath: /config/qBittorrent/qBittorrent.conf
              subPath: qBittorrent.conf
            - name: downloads
              mountPath: /downloads
            - name: complete
              mountPath: /complete/
            - name: home-ca-bundle
              mountPath: /etc/ssl/home-arpa
              readOnly: true
      volumes:
        - name: home-ca
          secret:
            secretName: home-arpa-tls
            items:
              - key: ca.crt
                path: ca.crt
        - name: home-ca-bundle
          emptyDir: {}
        - name: data
          configMap:
            name: qbittorrent-prod-media-config
        - name: downloads
          emptyDir: {}
        - name: complete
          nfs:
            server: ${server}
            path: ${path}/downloads
