apps/media/ingest/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-prod-media-svc-0
spec:
  selector:
    statefulset.kubernetes.io/pod-name: qbittorrent-prod-media-statefulset-0
  ports:
    - port: 8080
      targetPort: http
      name: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-prod-media-svc-1
spec:
  selector:
    statefulset.kubernetes.io/pod-name: qbittorrent-prod-media-statefulset-1
  ports:
    - port: 8080
      targetPort: http
      name: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-prod-media-svc-2
spec:
  selector:
    statefulset.kubernetes.io/pod-name: qbittorrent-prod-media-statefulset-2
  ports:
    - port: 8080
      targetPort: http
      name: http
      protocol: TCP
